commit on master

--- a/lawsystem/templates/clientHome.html
+++ b/lawsystem/templates/clientHome.html
@@ -8,6 +8,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="https://use.fontawesome.com/a48ffc1c86.js"></script>
 </head>
 
 <body>
@@ -20,7 +21,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="/clientHome/">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/clientHome/"><i class="fa fa-home" aria-hidden="true"></i>Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Hire Advocate</a>
@@ -30,12 +31,12 @@
               </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                My Account
+                <i class="fa fa-user" aria-hidden="true"></i>  My Account
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#">Settings</a>
                 <a class="dropdown-item" href="/home/">Logout</a>
-                
+                </div>
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0" method=POST action=
@@ -78,7 +79,7 @@
                               You can check the list of available advocates here.
                           </p>
     
-                          <a href="#" class="btn btn-dark btn-sm">
+                          <a href="/hireAdvocates/" class="btn btn-dark btn-sm">
                               Go!
                           </a>
                           
