--- a/lawsystem/templates/searchSection.html
+++ b/lawsystem/templates/searchSection.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  
+    <script src="https://use.fontawesome.com/a48ffc1c86.js"></script>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand">CCMS</a> 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,7 +19,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="/clientHome/">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/clientHome/"><i class="fa fa-home" aria-hidden="true"></i>Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Hire Advocate</a>
@@ -29,7 +29,7 @@
             </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              My Account
+              <i class="fa fa-user" aria-hidden="true"></i> My Account
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="#">Settings</a>
@@ -74,7 +74,6 @@
   </style>
 </head>
     <body>
-    {%include 'displaySection.html'%}
     {% block content %}
 <center>
     {% if sections %}
