--- a/lawsystem/lawsystem/static/styles/style_login.css
+++ b/lawsystem/lawsystem/static/styles/style_login.css
@@ -1,18 +1,27 @@
 
 body {margin: 0;  
   padding: 0;  
-  background-color:white;  
+  background-color:red;  
   font-family: 'Cambria'; 
+ 
+  background-image:url('/lawsystem/static/images/login_bg.jpg');
    }
+   #grad1 {
+    height: 200px;
+    background-color: red; /* For browsers that do not support gradients */
+    background-image: linear-gradient(to right,pink,lightpink, lightgreen,lightyellow);
+  }
 .login{  
       width: 380px;  
       overflow: hidden;  
       margin: auto;  
       margin: 20 0 0 450px;
       padding: 60px;  
-      background: rgb(139, 137, 137); 
+      background: rgb(139, 137, 137);
       margin-top: 80px;
-      border-radius: 10%;     
+      border-radius: 10%; 
+     border-color: black;
+    
 }  
 h1{  
   text-align: center;  
