--- a/lawsystem/templates/home.html
+++ b/lawsystem/templates/home.html
@@ -9,44 +9,73 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://use.fontawesome.com/a48ffc1c86.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+<style>
+  .navbar li {
+  /* (80px - button height 34px) / 2 = 23px */
+  padding-left: 10px !important;
+  padding-right: 10px !important;
+  font-size: medium;
+}
+</style>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav  class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <!--div class="container"-->
+        <img style="width: 90px; height: 50px; padding-right: 15px;" class="d-block w-80" src="{% static 'images/logo.PNG' %}" >
         <a class="navbar-brand">CCMS</a> 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
+        <div  class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav navbar-expand-lg navbar-dark bg-dark avbar-left">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#" ><i class="fa fa-home" aria-hidden="true"></i> Home</a>
             </li>
+            <li class="nav-item ">
+              <a class="nav-link" href="#"  >About</a>
+            </li>  
+            <li class="nav-item ">
+              <a class="nav-link" href="#"  >Services</a>
+            </li>  
+            <li class="nav-item ">
+              <a class="nav-link" href="#"  >Contact</a>
+            </li>            
+             </ul>
+        </div>
+      
+        <ul class="navbar-nav navbar-expand-lg navbar-dark bg-dark avbar-left">
             <li class="nav-item">
-              <a class="nav-link" href="/login/">Login</a>
+              <a class="nav-link" href="/login/"  ><span class="glyphicon glyphicon-log-in"></span> Login</a>
             </li>
-            
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <li class="nav-item dropdown" >
+              <a class="nav-link"  class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Register
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="/clientRegister/">As Client</a>
-                <a class="dropdown-item" href="/advocateRegister/">As Lawyer</a>
+                <a  class="dropdown-item" href="/clientRegister/">As Client</a>
+                <a  class="dropdown-item" href="/advocateRegister/">As Lawyer</a>
                 
               </div>
             </li>
-          </ul>
-        </div>
+        </ul>
+      
+      <!--div-->
       </nav>
-      <br><br><br><br>
-      <div id="carouselExampleControls" class="carousel slide " data-ride="carousel">
+      <br><br>
+      <div class="w3-container w3-cursive">
+      <h1 style="text-align: center; color:black; font-family: cursive;">COURT CASE MANAGEMENT SYSTEM</h1>
+     </div>
+      <br><br>
+
+       <div id="carouselExampleControls" class="carousel slide " data-ride="carousel">
         <div class="carousel-inner bg-dark">
           <div class="carousel-item active">
             <div class="d-flex justify-content-center">
             <img class="d-block w-80" src="{% static 'images/image1.jpg' %}" alt="First slide" height="300">
             <div class="carousel-caption d-none d-md-block">
-              <p>Courts And Cases</p>
+              <p ><b>Courts And Cases</b></p> 
             </div>
           </div></div>
           <div class="carousel-item">
@@ -64,6 +93,7 @@
             </div>
           </div></div>
         </div>
+
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
@@ -72,8 +102,32 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
-      </div><br><br><br><br><br><br><br><br><br>
-      <div class="card text-right text-light bg-dark">
+      </div>
+      
+  
+    <!--end-->
+      <div class="container">
+        <div class="row">
+          <div class="col-sm">
+            
+          </div>
+          <div class="col-sm">
+            <p class="text-center font-italic font-weight-bold">This is your one stop place to
+               hire a lawyer, get a legal advice, know about few sections and also access information about 
+               your on going case(if there is any). Our ultimate goal is to give easy access to users, all at one place.
+                All the details that we provide on our website are legit. And all your personal details are safe with us. 
+                Happy browsing!! </p>
+          </div>
+          <div class="col-sm">
+            
+          </div>
+        </div>
+      </div>
+      
+      <body class="d-flex flex-column min-vh-100">
+        <div class="wrapper flex-grow-1"></div>
+        
+        <div class="card card-dark text-right text-light bg-dark">
         <div class="card-footer">
           <i class="fa fa-phone-square" aria-hidden="true"></i>&nbsp; &nbsp;
           <i class="fa fa-envelope" aria-hidden="true"></i>&nbsp; &nbsp;
@@ -81,5 +135,6 @@
           <i class="fa fa-facebook-square" aria-hidden="true"></i>
         </div>
       </div>
-            
+    </body>     
+    
     </body></html>
