--- a/lawsystem/templates/login.html
+++ b/lawsystem/templates/login.html
@@ -5,11 +5,12 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="{% static 'styles/style_login.css' %}">
-
-
 </head>
-<body>
-  <div class="login">
+<body  class="bg"><!--linear-gradient(to right,pink,lightpink, lightgreen,lightyellow);" -->
+<div id="grad1" >
+  <div class="login" style="border-style: solid;
+  color: black;
+  border-width: thick; ">
     <h1>Login</h1>
   <form action="" method="POST">
     {%csrf_token%}
@@ -62,5 +63,6 @@
     {% endfor %}
 </ul>
 {% endif %}
+</div>
 </body>
 </html>
