--- a/lawsystem/templates/login.html
+++ b/lawsystem/templates/login.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="{% static 'styles/style_login.css' %}">
 </head>
-<body  class="bg"><!--linear-gradient(to right,pink,lightpink, lightgreen,lightyellow);" -->
-<div id="grad1" >
+<body style="color: white;">
+<div style="color: white;" >
   <div class="login" style="border-style: solid;
   color: black;
   border-width: thick; ">
@@ -34,13 +34,11 @@
     <span>Remember me</span>    
     <br><br>    
     <a class="btn btn-primary" href="#" role="button">Forget Password</a>   
-    <div>
         
-</div>
+  </div>
 </form>
+
 </div>
-
-
 
   <!--- <button style="width: 100%; padding: 10px 18px; background-color: black;" type="submit" id="loginbtn" >Login</button>
   </div>
@@ -63,6 +61,6 @@
     {% endfor %}
 </ul>
 {% endif %}
-</div>
+
 </body>
 </html>
