--- a/lawsystem/templates/advocateRegister.html
+++ b/lawsystem/templates/advocateRegister.html
@@ -62,6 +62,10 @@
     <label for="common">common</label><br>
     <input type="radio" id="statutory" name="expertise" value="statutory">
     <label for="statutory">statutory</label><br><br>
+
+    <label for="address"><b>Address</b></label>
+    <input type="text"   name="address" required><br>
+    
     <label for="email"><b>Email*</b></label>
     <input type="text"  placeholder="---Enter email ex: rahul@gmail.com--"  name="email" required>
     <br>
