--- a/lawsystem/templates/civil.html
+++ b/lawsystem/templates/civil.html
@@ -29,7 +29,46 @@
           text-align: center;
           font-family: Cuprum,sans-serif;
         }
-        
+        #ad_details {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 70%;
+}
+
+#ad_details td, #ad_details th {
+  border: 1px solid #ddd;
+  padding: 10px;
+}
+
+#ad_details tr:nth-child(even){background-color: #f2f2f2;}
+
+#ad_details tr:hover {background-color: #ddd;}
+
+#ad_details th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color:darkgrey;
+  color: white;
+}
+        .addbtn {
+  background-color:black;
+  position:static;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  font-size: 16px;
+  margin: 4px 2px;
+  opacity: 0.6;
+  transition: 0.3s;
+ height: 50px;
+ width: 200px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.addbtn:hover {opacity: 1}
     </style>
   </head>
   <body style="background-color:#878384;">
@@ -61,104 +100,67 @@
         </div>
       </nav><br>
       <h2>CIVIL CASE ADVOCATES</h2><br>
-      <div class="card text-dark bg-light mb-3" style="max-width: 75rem;">
-        <div class="card-header">ADVOCATE SUDHAKAR</div>
-        <div class="card-body">
-          <h5 class="card-title">9848778093</h5>
-          <p class="card-text">Balapur X Road,above Green Bawarchi Hotel,Balapur,500097</p>
-          <ul class="card-text">
-            <li>5.0 Rating</li>
-            <li>3+ Years in business</li>
-            <li>sudhakaradv@gmail.com</li>
+      <!--------------->
+  {% block content %}
+  <center>
+      {% if ad_details %}
+    
+        {% for id in ad_details %}
+          {% if forloop.counter|divisibleby:2 %}
+          <div class="card text-dark bg-dark mb-3" style="max-width: 75rem;">
+            <div class="card-header" style="color: white;">{{id.first_name}} {{id.last_name}} Advocate</div>
+            <div class="card-body">
+              <h5 class="card-title" style="color: white;">Phno: {{id.phno}}</h5>
+              <table id="ad_details">
+                <tr>
+                  <th>Experience</th>
+                  <th>Email</th>
+                  <th>Address</th>
+                </tr>
+                <tr>
+                  <td>{{id.experience}}+ Years in business</td>
+                  <td>{{id.email}} </td>
+                  <td>{{id.address}} </td>
+                </tr>
 
-          </ul>
-        </div>
-      </div>
-      <div class="card text-white bg-dark mb-3" style="max-width: 75rem;">
-        <div class="card-header">K.GOPAL SRINATH</div>
-        <div class="card-body">
-          <h5 class="card-title">9676704210</h5>
-          <p class="card-text">H.NO.1-4-27/72/73,2nd floor,Padmashali Colony,Kavadiguda,Hyderabad,500080</p>
-          <ul class="card-text">
-            <li>5.0 Rating</li>
-            <li>7+ Years in business</li>
-            <li>CIVIL Qualified</li>
-          </ul>
-        </div>
-      </div>
-      <div class="card text-dark bg-light mb-3" style="max-width: 75rem;">
-        <div class="card-header">T SUNIL RAJ ADVOCATE</div>
-        <div class="card-body">
-          <h5 class="card-title">9912789818</h5>
-          <p class="card-text">PLOT NO.36,Mata Building,Rd Number 12,Banjara Hills,Hyderabad,500034</p>
-          <ul class="card-text">
-            <li>4.9 Rating</li>
-            <li>20+ Years in business</li>
-            <li>TOP in both criminal and civil cases</li>
-          </ul>
-        </div>
-      </div>
-      <div class="card text-white bg-dark mb-3" style="max-width: 75rem;">
-        <div class="card-header">KRISHNA VENI ADVOCATE</div>
-        <div class="card-body">
-          <h5 class="card-title">8919526412</h5>
-          <p class="card-text">4-32-1109/2/57,Tulasi nagar,Allwyn Colony,Kukatpally,Hyderabad,500072</p>
-          <ul class="card-text">
-            <li>4.7 Rating</li>
-            <li>7+ Years in business</li>
-            <li>Expertise in Divorce Laws</li>
-          </ul>
-        </div>
-      </div>
-      <div class="card text-dark bg-light mb-3" style="max-width: 75rem;">
-        <div class="card-header">SAI KRISHAN AZAD ADVOCATE</div>
-        <div class="card-body">
-          <h5 class="card-title">9491856568</h5>
-          <p class="card-text">FLAT NO,S-4,Triveni Sangam Apartments,RD no3,Banjara Hills,Hyderabad,500034</p>
-          <ul class="card-text">
-            <li>5.0 Rating</li>
-            <li>18+ Years in business</li>
-            <li>Reputed Advocate for NRIs</li>
-            <li>founder of law media youtube channel</li>
-            <li>Certified MOST INFLUENTIAL LAWYER OF YEAR 2018</li>
-          </ul>
-        </div>
-      </div>
-      <div class="card text-white bg-dark mb-3" style="max-width: 75rem;">
-        <div class="card-header">KR SUNIL KUMAR ADVOCATE</div>
-        <div class="card-body">
-          <h5 class="card-title">9989244650</h5>
-          <p class="card-text">4TH FLOOR,Maheshwari Complex,Somajiguda,Hyderabad,500041</p>
-          <ul class="card-text">
-            <li>4.2 Rating</li>
-            <li>7+ years in business</li>
-            <li>One of the best for matrimonial matters</li>
-          </ul>
-        </div>
-      </div>
-      <div class="card text-dark bg-light mb-3" style="max-width: 75rem;">
-        <div class="card-header">SUJITH JAISWAL</div>
-        <div class="card-body">
-          <h5 class="card-title">7649999999</h5>
-          <p class="card-text">3-4-340, Saraswati Residency,Kachiguda,Hyderabad,500027</p>
-          <ul class="card-text">
-            <li>4.1 Rating</li>
-            <li>5+ Years in business</li>
-          </ul>
-        </div>
-      </div>
-      <div class="card text-white bg-dark mb-3" style="max-width: 75rem;">
-        <div class="card-header">SRINIVASA PRASAD</div>
-        <div class="card-body">
-          <h5 class="card-title">7877706551</h5>
-          <p class="card-text">FNO.302,victory towers,Narayanaguda,Hyderabad,500023</p>
-          <ul class="card-text">
-            <li>4.8 Rating</li>
-            <li>18+ Years in business</li>
-            <li>top leagl advisor</li>
-          </ul>
-        </div>
-      </div>
+              </table>
+            </div>
+            <button  type="submit" class="addbtn" >Add to list</button>
+          </div>
+          
+          {% else %}
+          <div class="card text-dark bg-light mb-3" style="max-width: 75rem;">
+            <div class="card-header"><b>{{id.first_name}} {{id.last_name}} Advocate</b></div>
+            <div class="card-body">
+              <h5 class="card-title">Phno: {{id.phno}}</h5>
+              <table id="ad_details">
+                <tr>
+                  <th>Experience</th>
+                  <th>Email</th>
+                  <th>Address</th>
+                </tr>
+                <tr>
+                  <td>{{id.experience}}+ Years in business</td>
+                  <td>{{id.email}} </td>
+                  <td>{{id.address}} </td>
+                </tr>
+              </table>
+            </div>
+            <button type="submit" class="addbtn">Add to list</button>
+          </div>
+          {% endif %}
+         
+       {% endfor%}
+      {% else %}
+      
+        <h1>nothing to display</h1>
+      
+      {% endif %}
+      
+      </center>
+      
+  {% endblock %}
+      
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
   </body>
