--- a/lawsystem/templates/firms.html
+++ b/lawsystem/templates/firms.html
@@ -29,7 +29,46 @@
           text-align: center;
           font-family: Cuprum,sans-serif;
         }
-        
+        #ad_details {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 70%;
+}
+
+#ad_details td, #ad_details th {
+  border: 1px solid #ddd;
+  padding: 10px;
+}
+
+#ad_details tr:nth-child(even){background-color: #f2f2f2;}
+
+#ad_details tr:hover {background-color: #ddd;}
+
+#ad_details th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color:darkgrey;
+  color: white;
+}
+        .addbtn {
+  background-color:black;
+  position:static;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  font-size: 16px;
+  margin: 4px 2px;
+  opacity: 0.6;
+  transition: 0.3s;
+ height: 50px;
+ width: 200px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.addbtn:hover {opacity: 1}
     </style>
   </head>
   <body style="background-color:#878384;">
@@ -60,6 +99,67 @@
         </div>
       </nav><br>
       <h2>ADVOCATE FIRMS</h2><br>
+
+      {% block content %}
+      <center>
+          {% if ad_details %}
+        
+            {% for id in ad_details %}
+              {% if forloop.counter|divisibleby:2 %}
+              <div class="card text-dark bg-dark mb-3" style="max-width: 75rem;">
+                <div class="card-header" style="color: white;">{{id.first_name}} {{id.last_name}} Firm</div>
+                <div class="card-body">
+                  <h5 class="card-title" style="color: white;">Phno: {{id.phno}}</h5>
+                  <table id="ad_details">
+                    <tr>
+                      <th>Experience</th>
+                      <th>Email</th>
+                      <th>Address</th>
+                    </tr>
+                    <tr>
+                      <td>{{id.experience}}+ Years in business</td>
+                      <td>{{id.email}} </td>
+                      <td>{{id.address}} </td>
+                    </tr>
+    
+                  </table>
+                </div>
+                <button  type="submit" class="addbtn" >Add to list</button>
+              </div>
+              
+              {% else %}
+              <div class="card text-dark bg-light mb-3" style="max-width: 75rem;">
+                <div class="card-header"><b>{{id.first_name}} {{id.last_name}} Firm</b></div>
+                <div class="card-body">
+                  <h5 class="card-title">Phno: {{id.phno}}</h5>
+                  <table id="ad_details">
+                    <tr>
+                      <th>Experience</th>
+                      <th>Email</th>
+                      <th>Address</th>
+                    </tr>
+                    <tr>
+                      <td>{{id.experience}}+ Years in business</td>
+                      <td>{{id.email}} </td>
+                      <td>{{id.address}} </td>
+                    </tr>
+                  </table>
+                </div>
+                <button type="submit" class="addbtn">Add to list</button>
+              </div>
+              {% endif %}
+             
+           {% endfor%}
+          {% else %}
+          
+            <h1>nothing to display</h1>
+          
+          {% endif %}
+          
+          </center>
+          
+      {% endblock %}
+    <!---
       <div class="card text-dark bg-light mb-3" style="max-width: 75rem;">
         <div class="card-header">DISHA LAW FIRM</div>
         <div class="card-body">
@@ -163,7 +263,7 @@
           </ul>
         </div>
       </div>
-
+--->
       
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
   </body>
