--- a/lawsystem/lawsystem/static/styles/style_login.css
+++ b/lawsystem/lawsystem/static/styles/style_login.css
@@ -2,7 +2,8 @@
 body {margin: 0;  
   padding: 0;  
   font-family: 'Cambria'; 
-  background-color: white;
+
+  background-image:url('{% static "images/login_bg.jpg"%');
    }
   
 .login{  
