--- a/lawsystem/lawsystem/static/styles/style_login.css
+++ b/lawsystem/lawsystem/static/styles/style_login.css
@@ -3,7 +3,7 @@ body {margin: 0;
   padding: 0;  
   font-family: 'Cambria'; 
 
-  background-image:url('{% static "images/login_bg.jpg"%');
+  background-image:url('{% static "images/login_bg.jpg"%}');
    }
   
 .login{  
