--- a/lawsystem/assests/styles/style_login.css
+++ b/lawsystem/assests/styles/style_login.css
@@ -1,9 +1,8 @@
-
 body {margin: 0;  
   padding: 0;  
   font-family: 'Cambria'; 
-
-  background-image:url('{% static "images/login_bg.jpg"%');
+  background-color:white;
+ 
    }
   
 .login{  
