--- a/lawsystem/assests/styles/style_login.css
+++ b/lawsystem/assests/styles/style_login.css
@@ -1,8 +1,7 @@
 body {margin: 0;  
   padding: 0;  
   font-family: 'Cambria'; 
-  background-color:white;
- 
+  background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0)),url('{%static "images/login_bg.jpg"%}');
    }
   
 .login{  
