--- a/lawsystem/templates/login.html
+++ b/lawsystem/templates/login.html
@@ -6,9 +6,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="{% static 'styles/style_login.css' %}">
 </head>
-<body style="color: white;">
+<body style="background-color: white;">
 
-  <div class="login" style="border-style: solid;
+  <div class="login" style="border-style: solid;">
   color: black;
   border-width: thick; ">
     <h1>Login</h1>
