--- a/lawsystem/templates/project.html
+++ b/lawsystem/templates/project.html
@@ -38,7 +38,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav"> 
             <li class="nav-item active">
-              <a class="nav-link" href="clientHome.html"><i class="fa fa-home" aria-hidden="true"></i>MyHome<span class="sr-only"></span></a>
+              <a class="nav-link" href="/clientHome/"><i class="fa fa-home" aria-hidden="true"></i>MyHome<span class="sr-only"></span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">My List</a>
@@ -84,36 +84,13 @@
           </div>
         </div>
       </div><br><br>
+     
       <div class="row">
         <div class="col-sm-6">
           <div class="card">
             <div class="card-body" style="background-color: #F0E7E3;">
-              <h3 class="card-title">COMMON CASE</h3>
-              <p class="card-text" style="color: #000;">Commom miscellaneous conflict cases.</p>
-              <div class="d-grid gap-2 col-6 mx-auto">
-                <a href="/commonAd/" class="btn btn-primary" type="button" style="background-color: #B5DCCD; COLOR:#000;">Search</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6">
-          <div class="card">
-            <div class="card-body" style="background-color: #F0E7E3;">
-              <h3 class="card-title">STATUTORY CASE</h3>
-              <p class="card-text" style="color: #000;">Cases on statutory laws issued by legislative assembly.</p>
-              <div class="d-grid gap-2 col-6 mx-auto">
-                <a href="/statutoryAd/" class="btn btn-primary" type="button" style="background-color: #B5DCCD; COLOR:#000;">Search</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div><br><br>
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="card">
-            <div class="card-body" style="background-color: #F0E7E3;">
-              <h3 class="card-title">ALL-IN-FIRMS</h3>
-              <p class="card-text" style="color: #000;">All kinds of court case lawyers form a firm.</p>
+              <h3 class="card-title">ALL</h3>
+              <p class="card-text" style="color: #000;"></p>
               <div class="d-grid gap-2 col-6 mx-auto">
                 <a href="/firms/" class="btn btn-primary" type="button" style="background-color: #B5DCCD; COLOR:#000;">Search</a>
               </div>
