--- a/lawsystem/templates/criminal.html
+++ b/lawsystem/templates/criminal.html
@@ -94,7 +94,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="#">Settings</a>
-            <a class="dropdown-item" href="/home/">Logout</a>
+            <a class="dropdown-item" href="/logout/">Logout</a>
               </div>
             </li>
           </ul>
