--- a/lawsystem/templates/firms.html
+++ b/lawsystem/templates/firms.html
@@ -92,7 +92,7 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="#">Settings</a>
-                <a class="dropdown-item" href="/home/">Logout</a>
+                <a class="dropdown-item" href="/logout">Logout</a>
               </div>
             </li>
           </ul>
