--- a/lawsystem/templates/project.html
+++ b/lawsystem/templates/project.html
@@ -50,7 +50,7 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#">Settings</a>
-                <a class="dropdown-item" href="/home/">Logout</a>
+                <a class="dropdown-item" href="/logout/">Logout</a>
                 </div>
             </li>
 
