--- a/lawsystem/lawsystem/static/styles/style_login.css
+++ b/lawsystem/lawsystem/static/styles/style_login.css
@@ -1,7 +1,7 @@
 body {margin: 0;  
   padding: 0;  
   font-family: 'Cambria'; 
-  background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0)),url('{%static "images/login_bg.jpg"%}');
+  background-image: url("{%static 'images/login_bg.jpg'%}");
    }
   
 .login{  
