--- a/lawsystem/templates/advocateHome.html
+++ b/lawsystem/templates/advocateHome.html
@@ -10,7 +10,13 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://use.fontawesome.com/a48ffc1c86.js"></script>
 </head>
-
+<style>
+  #hello-msg{
+    font-size: 18px;
+    color:#fff;
+    margin-right: 20px;
+  }
+  </style>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand">CCMS</a> 
@@ -32,10 +38,11 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#">Settings</a>
-                <a class="dropdown-item" href="/home/">Logout</a>
+                <a class="dropdown-item" href="/logout/">Logout</a>
                 
             </li>
           </ul>
+          <span id="hello-msg">Hello,{{request.user}}</span>
         </div>
       </nav>
 </body>
