--- a/lawsystem/templates/clientHome.html
+++ b/lawsystem/templates/clientHome.html
@@ -10,7 +10,13 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://use.fontawesome.com/a48ffc1c86.js"></script>
 </head>
-
+<style>
+#hello-msg{
+  font-size: 18px;
+  color:#fff;
+  margin-right: 20px;
+}
+</style>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand">CCMS</a> 
@@ -31,14 +37,15 @@
               </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="fa fa-user" aria-hidden="true"></i>  My Account
+                <i  class="fa fa-user" aria-hidden="true"></i>  My Account
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#">Settings</a>
-                <a class="dropdown-item" href="/home/">Logout</a>
+                <a class="dropdown-item" href="/logout/">Logout</a>
                 </div>
             </li>
           </ul>
+          <span id="hello-msg">Hello,{{request.user}}</span>
           <form class="form-inline my-2 my-lg-0" method=POST action=
           "{% url 'search-sections' %}">
           {%csrf_token%}
