--- a/lawsystem/templates/common.html
+++ b/lawsystem/templates/common.html
@@ -49,7 +49,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="#">Settings</a>
-              <a class="dropdown-item" href="/home/">Logout</a>
+              <a class="dropdown-item" href="/logout">Logout</a>
 
               </div>
             </li>
