--- a/lawsystem/templates/searchSection.html
+++ b/lawsystem/templates/searchSection.html
@@ -33,7 +33,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="#">Settings</a>
-              <a class="dropdown-item" href="/home/">Logout</a>
+              <a class="dropdown-item" href="/logout/">Logout</a>
               
           </li>
         </ul>
