--- a/lawsystem/templates/advocateRegister.html
+++ b/lawsystem/templates/advocateRegister.html
@@ -58,10 +58,10 @@
     <label for="criminal">criminal</label><br>
     <input type="radio" id="civil" name="expertise" value="civil">
     <label for="civil">civil</label><br>
-    <input type="radio" id="common" name="expertise" value="common">
-    <label for="common">common</label><br>
-    <input type="radio" id="statutory" name="expertise" value="statutory">
-    <label for="statutory">statutory</label><br><br>
+    <input type="radio" id="others" name="expertise" value="others">
+    <label for="others">others</label><br>
+    <!--<input type="radio" id="statutory" name="expertise" value="statutory">
+    <label for="statutory">statutory</label><br><br>-->
 
     <label for="address"><b>Address</b></label>
     <input type="text"   name="address" required><br>
