--- a/lawsystem/templates/project.html
+++ b/lawsystem/templates/project.html
@@ -41,7 +41,7 @@
               <a class="nav-link" href="/clientHome/"><i class="fa fa-home" aria-hidden="true"></i>MyHome<span class="sr-only"></span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">My List</a>
+              <a class="nav-link" href="/MyAdList/">My List</a>
             </li>
 
             <li style="float: right;" class="nav-item dropdown">
@@ -55,7 +55,7 @@
             </li>
 
             </li>
-          </ul>
+          </ul> 
         </div>
       </nav>
      
