--- a/lawsystem/templates/clientHome.html
+++ b/lawsystem/templates/clientHome.html
@@ -30,7 +30,7 @@
               <a class="nav-link" href="/clientHome/"><i class="fa fa-home" aria-hidden="true"></i>Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Hire Advocate</a>
+              <a class="nav-link" href="/hireAdvocates/">Hire Advocate</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Check Status</a>
@@ -78,7 +78,7 @@
           </div>
               <div class="col-lg-6 mb-4">
                   <div class="card" style="width: 85%; height: 80%; background-color: lightsalmon; box-shadow: 1px 1px 2px black;">
-                    <img class="card-img-top" style="width: 100%; height: 70%;" src="{% static 'images/advocate.png' %}" alt="Card image cap">
+                    <img class="card-img-top" style="width: 100%; height: 65%;" src="{% static 'images/advocate.png' %}" alt="Card image cap">
     
                       <div class="card-body">
                           <h5 class="card-title">Hire Advocate</h5>
