--- a/lawsystem/templates/clientHome.html
+++ b/lawsystem/templates/clientHome.html
@@ -19,7 +19,7 @@
 </style>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand">CCMS</a> 
+        <a class="navbar-brand">way2CMS</a> 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -33,8 +33,8 @@
               <a class="nav-link" href="/hireAdvocates/">Hire Advocate</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Check Status</a>
-              </li>
+                <a class="nav-link" href="/caseStatus/">Check Status</a>
+              </li> 
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <i  class="fa fa-user" aria-hidden="true"></i>  My Account
@@ -103,7 +103,7 @@
                               Check the Status of your court case here!
                           </p>
                             
-                          <a href="#" class="btn btn-dark btn-sm">
+                          <a href="/caseStatus/" class="btn btn-dark btn-sm">
                               Go!
                           </a>
                           
