--- a/lawsystem/templates/home.html
+++ b/lawsystem/templates/home.html
@@ -24,7 +24,7 @@
     <nav  class="navbar navbar-expand-lg navbar-dark bg-dark">
       <!--div class="container"-->
         <img style="width: 90px; height: 50px; padding-right: 15px;" class="d-block w-80" src="{% static 'images/logo.PNG' %}" >
-        <a class="navbar-brand">CCMS</a> 
+        <a class="navbar-brand">way2CMS</a> 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -63,14 +63,14 @@
       
       <!--div-->
       </nav>
-      <br><br>
+      
       <div class="w3-container w3-cursive">
-      <h1 style="text-align: center; color:black; font-family: cursive;">COURT CASE MANAGEMENT SYSTEM</h1>
+      <h1 class=" text-center font-weight-bold">way2CMS</h1>
      </div>
-      <br><br>
+      <br>
 
        <div id="carouselExampleControls" class="carousel slide " data-ride="carousel">
-        <div class="carousel-inner bg-dark">
+        <div class="carousel-inner bg-light">
           <div class="carousel-item active">
             <div class="d-flex justify-content-center">
             <img class="d-block w-80" src="{% static 'images/image1.jpg' %}" alt="First slide" height="300">
@@ -103,7 +103,7 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-      
+      <br>
   
     <!--end-->
       <div class="container">
@@ -112,7 +112,7 @@
             
           </div>
           <div class="col-sm">
-            <p class="text-center font-italic font-weight-bold">This is your one stop place to
+            <p class="text-center font-italic font-weight-bold">way2CMS(Case managment system). This is your one stop place to
                hire a lawyer, get a legal advice, know about few sections and also access information about 
                your on going case(if there is any). Our ultimate goal is to give easy access to users, all at one place.
                 All the details that we provide on our website are legit. And all your personal details are safe with us. 
