--- a/lawsystem/templates/MyClientList.html
+++ b/lawsystem/templates/MyClientList.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    {%load static%}
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Cuprum&family=Odibee+Sans&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+  {%load static%}
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://use.fontawesome.com/a48ffc1c86.js"></script>
-    <title>Hire Lawyer</title>
-    <style>
-        
-        h5{
+</head>
+<style>
+  #hello-msg{
+    font-size: 18px;
+    color:#fff; 
+    margin-right: 20px;
+  }
+  h5{
             text-align: center;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         }
@@ -31,22 +31,22 @@
           font-family: Cuprum,sans-serif;
         }
               
-    #advocateDetails {
+    #clientDetails {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse; 
   width: 90%;
 }
 
-#advocateDetails td, #advocateDetails th {
+#clientDetails td, #clientDetails th {
   border: 1px solid #ddd;
   padding: 10px;
 }
 
-#advocateDetails tr:nth-child(even){background-color: #f2f2f2;}
+#clientDetails tr:nth-child(even){background-color: #f2f2f2;}
 
-#advocateDetails tr:hover {background-color: #ddd;}
+#clientDetailss tr:hover {background-color: #ddd;}
 
-#advocateDetails th {
+#clientDetails th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
@@ -71,44 +71,45 @@
           }
 
           .removebtn:hover {opacity: 1}
-    </style>
-
-  </head>
-  <body style="background-color:#878384;">
-    {%csrf_token%}
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand">way2CMS</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="/clientHome/"><i class="fa fa-home" aria-hidden="true"></i>MyHome<span class="sr-only"></span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/MyAdList/">My List</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            MyAccount
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">Settings</a>
-            <a class="dropdown-item" href="/logout/">Logout</a>
-              </div>
+  </style>
+<body>
+  {%csrf_token%}
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand">way2CMS</a> 
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div style="position: relative;" class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul  class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="/advocateHome/"><i class="fa fa-home" aria-hidden="true"></i>Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/MyClientList/">My Clients</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a  class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="fa fa-user" aria-hidden="true"></i>  My Account
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Settings</a>
+                <a class="dropdown-item" href="/logout/">Logout</a>
+                
             </li>
           </ul>
+          <span id="hello-msg">Hello,{{request.user}}</span>
         </div>
-      </nav><br>
+      </nav> <br> 
       <div>
+
         {% block content %}
         <br>
 <center>
     {% if id %}
       <h2>My List</h2>
       <br>
-    <table id="advocateDetails"> 
+    <table id="clientDetails">
       <tr>
         <th>Name</th>
         <th>Email</th>
@@ -138,8 +139,8 @@
     <h2>My List</h2>
       <h5>Hey!. Nothing to display.</h5>
 
-      <table id="advocateDetails">
-        <tr> 
+      <table id="clientDetails">
+        <tr>
           <th>Name</th>
           <th>Email</th>
           <th>Phone No</th>
@@ -156,5 +157,6 @@
     {% endblock %}
             
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-        </body>
-      </html>
+  
+    </body>
+    </html>
