--- a/lawsystem/templates/project.html
+++ b/lawsystem/templates/project.html
@@ -31,7 +31,7 @@
   </head>
   <body style="background-color:#878384;">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand">CCMS</a>
+        <a class="navbar-brand">way2CMS</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
